add 路径规划
